# Shen.hs

./: .gitignore  LICENSE  Lexer.x  Makefile  Parser.hs  README.md  Session.vim  Shen.hs.cabal
K Lambda/: Shen.hs.prof  declarations.kl  t-star.kl  toplevel.kl
Text/Parsec/: KLambda.hs
dynload_test/: Debug.hs  Makefile  Test.hs
src/: Main.hs  Makefile
src/Data/Text/: Class.hs
src/KLambda/: Env.hs  Eval.hs  Fun.hs  Lexer.x  Main.hs  Parser.hs  Serialize.hs  StdFun.hs  Test.hs  Types.hs  Unparse.hs  Utils.hs  Vector.hs
src/Text/Parsec/: KLambda.hs
src/Text/Parsec/KLambda/: Exp.hs  Val.hs
