name:                Shen-hs
version:             0.1.0.0
synopsis:            Shen programming language implementation.
homepage:            http://github.com/osa1/Shen.hs
license:             MIT
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

flag devel
  description:         Build Shen.hs-test executable
  default:             False

executable Shen.hs
  main-is:             Main.hs
  other-modules:       KLambda.Lexer
  ghc-options:         -O2
  build-depends:         base >= 4.5 && < 4.7
                       , parsec ==3.1.*
                       , unordered-containers ==0.2.*
                       , mtl ==2.1.*
                       , array ==0.4.*
                       , vector ==0.10.*
                       , transformers ==0.3.*
                       , hashable ==1.2.*
                       , time ==1.4.*
                       , filepath ==1.3.*
                       , directory==1.2.*
                       , containers==0.5.*
                       , binary==0.5.*
                       , bytestring ==0.10.*
                       , plugins ==1.5.*
                       , text-binary ==0.1.*
                       , text ==0.11.*
  hs-source-dirs:      src
  build-tools:         alex

executable Shen.hs-test
  if !flag(devel)
    buildable:         False
  main-is:             Test.hs
  other-modules:       KLambda.Lexer
  ghc-options:         -O2
  build-depends:         base >= 4.5 && < 4.7
                       , parsec ==3.1.*
                       , unordered-containers ==0.2.*
                       , mtl ==2.1.*
                       , array ==0.4.*
                       , vector ==0.10.*
                       , transformers ==0.3.*
                       , hashable ==1.2.*
                       , time ==1.4.*
                       , filepath ==1.3.*
                       , directory==1.2.*
                       , containers==0.5.*
                       , binary==0.5.*
                       , bytestring ==0.10.*
                       , plugins ==1.5.*
                       , text-binary ==0.1.*
                       , text ==0.11.*
  hs-source-dirs:      src
  build-tools:         alex

library
  exposed-modules:     KLambda.Types,
                       KLambda.Parser
  other-modules:         KLambda.Env
                       , KLambda.Eval
                       , KLambda.Lexer
                       , KLambda.Vector
                       , Text.Parsec.KLambda.Exp
                       , Text.Parsec.KLambda.Val
                       , Data.Text.Class
  build-depends:         base >= 4.5 && < 4.7
                       , parsec ==3.1.*
                       , unordered-containers ==0.2.*
                       , mtl ==2.1.*
                       , array ==0.4.*
                       , vector ==0.10.*
                       , transformers ==0.3.*
                       , hashable ==1.2.*
                       , time ==1.4.*
                       , filepath ==1.3.*
                       , directory==1.2.*
                       , containers==0.5.*
                       , binary==0.5.*
                       , bytestring ==0.10.*
                       -- , plugins ==1.5.*
                       , text-binary ==0.1.*
                       , text ==0.11.*
  hs-source-dirs:      src
  build-tools:         alex
